# Scene-AI-challenge

./: README.md
pytorch/: README.MD  dataset.py  main.py  utils.py
pytorch/checkpoints/: README.md  statedict需求.txt
pytorch/models/: Dense.py  Inception_new.py  Inception_ori.py  __init__.py  densenet.py  densenet_new.py  inceptionnet.py  inceptionnet_new.py  resnet.py  vgg.py
pytorch/scripts/: data_process.py
tensorflow/: 删除扩增文件.ipynb
tensorflow/ImageNetModel/: README.md
tensorflow/dataprocess/ColorAugmentation/: CMakeLists.txt  ColorSpace.cpp  HSL.cpp  main.cpp
tensorflow/dataprocess/DataRename/: DataRename.py  scene_classes.csv
tensorflow/dataprocess/PCA-Jittering/: main.py
tensorflow/dataprocess/PCA-Jittering/PcaJittering/: PcaJittering.py
tensorflow/dataset/: README.md
tensorflow/slim/: freeze_graph.py  scenenet.py  test_slim_softmax.py  train_slim_inception_vgg_softmax.py  train_slim_resnet_softmax.py  util.py
tensorflow/slim/models/: __init__.py  fixed_size_pool.py  inception.py  inception_v1.py  inception_v2.py  inception_v3.py  inception_v4.py  nets_factory.py  resnet_v1.py  resnet_v2.py  spp_layer.py  vgg.py
