cmake_minimum_required(VERSION 3.6)
project(ColorAugmentation)

set(CMAKE_CXX_STANDARD 11)
set(SOURCE_FILES main.cpp)
set(BOOST_ROOT "/usr/local/include/boost")
include_directories(/usr/local/include)
link_directories(/usr/local/lib)
add_executable(ColorAugmentation ${SOURCE_FILES})
find_package(OpenCV REQUIRED)
message(STATUS "OpenCV library status:")
message(STATUS "version: ${OpenCV_VERSION}")
message(STATUS "libraries: ${OpenCV_LIBS}")
message(STATUS "include path: ${OpenCV_INCLUDE_DIRS}")
target_link_libraries(ColorAugmentation ${OpenCV_LIBS})
target_link_libraries(ColorAugmentation boost_thread boost_system boost_filesystem)
